fix: make thicker scrollbars work again
(only works sometimes, but better than never)

--- a/gtk/.config/gtk-3.0/gtk.css
+++ b/gtk/.config/gtk-3.0/gtk.css
@@ -1,9 +1,7 @@
-scrollbar slider {
-    /* Size of the slider */
-    min-width: 20px;
-    min-height: 15px;
-    border-radius: 17px;
-
-    /* Padding around the slider */
-    border: 2px solid transparent;
+scrollbar, scrollbar button, scrollbar slider {
+    -GtkScrollbar-has-backward-stepper: true;
+    -GtkScrollbar-has-forward-stepper: true;
+    min-width: 26px;
+    min-height: 26px;
+    border-radius: 0;
 }
